# courses

./: .gitignore
CS123_Standford_Deep_NLP/lectures/lecture01-word2vecs1/: 1.1. Word2Vec _ Myndbook.html
CS143_Standford_Compilers/: Lexical Analysis With Flex, for Flex 2.6.2_ Top.html  Links.txt  Syllabus.html  Top (Bison 3.8.1).html
CS143_Standford_Compilers/assignments/cs143/: Dockerfile  README.md  run.docker
CS149_Standford_Parallel_Computing/assignments/: .gitattributes  .gitignore  run_ispc.sh
CS149_Standford_Parallel_Computing/assignments/asst2/: note.md
CS231A_Standford_3D_CV/: Syllabus.html
CS231A_Standford_3D_CV/Syllabus_files/: css  style.css
CS418_Illinois_CUDA_Programming/: CUDA Programming - Illinois.xlsx
CS418_Illinois_CUDA_Programming/assignments/: README.md
CS418_Illinois_CUDA_Programming/assignments/MP0/: template.cu  wb.h
CS418_Illinois_CUDA_Programming/assignments/MP1/: data_parallel_execution_model.ipynb  solution.h  template.cu
CS418_Illinois_CUDA_Programming/assignments/MP2/: solution.h  template.cu
CS418_Illinois_CUDA_Programming/assignments/MP3/: solution.h  template.cu
CS418_Illinois_CUDA_Programming/assignments/MP4/: run_datasets  solution.h  template.cu
CS418_Illinois_CUDA_Programming/assignments/MP5/: solution.h  template.cu
CS418_Illinois_CUDA_Programming/assignments/MP6/: run_datasets  template.cu
CS418_Illinois_CUDA_Programming/assignments/MP7/: Readme.md  run_datasets  template.cu
CS418_Illinois_CUDA_Programming/assignments/MP8/: Readme.md
CS418_Illinois_CUDA_Programming/assignments/Project/: README.md  m1.cc  m2.cc  m3.cc  rai_build.yml
CS418_Illinois_CUDA_Programming/download_script/: download.py  requirements_download.txt  urls.old.json
CS418_Illinois_CUDA_Programming/lectures/Lecture 1 - Introduction, GPU Basic/: diagram.drawio
CS418_Illinois_CUDA_Programming/lectures/Lecture 2 - Data Parallel Execution Model/: CUDA Programming - GPU and Execution model.pptx
CS418_Illinois_CUDA_Programming/lectures/Lecture 7 - Tiled Convolution/: tiled-convolution.drawio
Coursera_FPCV/assignments/: build_env.sh  env.sh  requirements.txt
Coursera_FPCV/assignments/binary_image/: __init__.py
Coursera_FPCV/assignments/features/: __init__.py  boundary.py  edges.py  kernels.py
Coursera_FPCV/assignments/tests/: test_boundary_detection.py  test_edge_detection.py  test_hough_transform.py
Languages/Korean/Sejong Korean 1A slides/: 20251202.pptx  20251209.pptx  20251211.pptx  20251216.pptx  (+2 more)
Programming_Languages/cpp/CMake/libs/MathLib/: CMakeLists.txt
Programming_Languages/cpp/CMake/src/TestMath/: CMakeLists.txt  TestMathConfig.h.in  build.sh  configure.sh  main.cpp  run.sh
Programming_Languages/cpp/CMake/tests/TestMath/: CMakeLists.txt  main.cpp
(+51 files in other folders)
